// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headers|PageHeader With Subtitle 1`] = `
<PageHeader
  subtitle="Here is a subtitle"
>
  <header
    className="page-header bg-primary-lighter"
  >
    <h1
      className="page-header__title"
    >
      Hello World
    </h1>
    <p
      className="page-header__lead"
    >
       
      Here is a subtitle
    </p>
  </header>
</PageHeader>
`;

exports[`Storyshots Headers|PageHeader With Text Content 1`] = `
<PageHeader>
  <header
    className="page-header bg-primary-lighter"
  >
    <h1
      className="page-header__title"
    >
      Hello World
    </h1>
  </header>
</PageHeader>
`;
